<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.brahmkshatriya.echo.ui.main.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:contentDescription="@string/home"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_shelf_lists" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <FrameLayout
        android:id="@+id/appBarOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?navBackground"
        android:paddingTop="12dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorOutlineVariant" />
    </FrameLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/quickSearchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:hint="@string/search"
        app:backHandlingEnabled="true"
        app:backgroundTint="?navBackground"
        app:closeIcon="@drawable/ic_close"
        app:searchHintIcon="@drawable/ic_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?echoBackground"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:scrollbars="none">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    style="@style/Widget.Material3.MaterialButtonToggleGroup.Connected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:spacing="-4dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/commandPlayPause"
                        style="@style/SideBarButton"
                        android:text="@string/v4_command_play_pause"
                        app:icon="@drawable/ic_play_circle" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/commandSmartQueue"
                        style="@style/SideBarButton"
                        android:text="@string/v4_smart_queue_short"
                        app:icon="@drawable/ic_queue_music" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/commandDownloads"
                        style="@style/SideBarButton"
                        android:text="@string/downloads"
                        app:icon="@drawable/ic_download_for_offline" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/commandV4Lab"
                        style="@style/SideBarButton"
                        android:text="@string/v4_lab"
                        app:icon="@drawable/ic_autorenew" />

                </com.google.android.material.button.MaterialButtonToggleGroup>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/quickSearchRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:contentDescription="@string/search"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>

    </com.google.android.material.search.SearchView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
