<?xml version="1.0" encoding="utf-8"?>
<me.zhanghai.android.fastscroll.FastScrollNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:clipToPadding="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/playback_speed"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/speedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="?colorPrimary"
            android:textSize="18sp"
            tools:text="1.00x" />

        <com.google.android.material.slider.Slider
            android:id="@+id/speedSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:stepSize="0.05"
            android:value="1"
            android:valueFrom="0.25"
            android:valueTo="4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:alpha="0.15"
            android:background="?attr/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/playback_pitch"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pitchValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="?colorPrimary"
            android:textSize="18sp"
            tools:text="1.00x" />

        <com.google.android.material.slider.Slider
            android:id="@+id/pitchSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:stepSize="0.05"
            android:value="1"
            android:valueFrom="0.25"
            android:valueTo="4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:alpha="0.15"
            android:background="?attr/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/bass_boost"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:alpha="0.66"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:text="@string/bass_boost_desc" />

        <com.google.android.material.slider.Slider
            android:id="@+id/bassBoostSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:stepSize="1"
            android:value="0"
            android:valueFrom="0"
            android:valueTo="10" />

        <LinearLayout
            android:id="@+id/equalizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equalizer"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.66"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:text="@string/equalizer_summary" />
        </LinearLayout>
    </LinearLayout>

</me.zhanghai.android.fastscroll.FastScrollNestedScrollView>
